Add system controller browse
