# main.go
@@ -122,10 +122,11 @@ func main() {
 			libraries.POST("/:libraryId/shares", controller.RequireAdmin(), controller.ShareLibrary(db, libraryService, userService))
 			libraries.DELETE("/:libraryId/shares/:userId", controller.RequireAdmin(), controller.UnshareLibrary(db))
 		}
-	}
-	system := api.Group("/system")
-	{
-		system.GET("/health", controller.HealthCheckController(db))
+		system := api.Group("/system")
+		{
+			system.GET("/health", controller.HealthCheckController(db))
+			system.POST("/browse", controller.RequireAdmin(), controller.SystemBrowse())
+		}
 	}
 	router.NoRoute(controller.Static(http.FS(build.App)))
 
